--- a/src/page/common/header/index.scss
+++ b/src/page/common/header/index.scss
@@ -30,3 +30,14 @@
         }
     }
 }
+
+//面包屑导航
+.crumb{
+    height: 50px;
+    line-height: 50px;
+    background: #eeeeee;
+    color: #888888;
+    font-size: 14px;
+    margin-bottom: 15px;
+    border-top: 2px solid $themeColor;
+}
