--- a/src/page/user-center/index.scss
+++ b/src/page/user-center/index.scss
@@ -8,6 +8,8 @@
         display: inline-block;
         text-align: right;
         font-weight: bold;
+        text-align: justify;
+        text-align-last: justify;
     }
     .text {
         display: inline-block;
