--- a/src/page/index/index.scss
+++ b/src/page/index/index.scss
@@ -1,2 +1,130 @@
-@import '../../build/css/_sprite.scss';
+@import '../common/glob.scss';
+$keywordItemHeight:40px;
+.keyword-list {
+    float: left;
+    width: 260px;
+    padding: 20px 0;
+    height: $keywordItemHeight*6;
+    margin-right: 10px;
+    background: #666666;
+    .keyword-item {
+        padding-left: 10px;
+        height: $keywordItemHeight;
+        line-height: $keywordItemHeight;
+        font-size: 14px;
+        &:hover {
+            background: #999999;
+        }
+        .keyword-category {
+            padding: 0 8px;
+            font-size: 16px;
+            color: #ffffff;
+            font-weight: bold;
+        }
+        .link {
+            color: #e9e9e9;
+            margin-right: 4px;
+            &:hover {
+                color: $themeColor;
+            }
+        }
+    }
+}
 
+.banner-con {
+    background: #eeeeee;
+    height: 280px;
+    width: 810px;
+    float: right;
+    position: relative;
+    .loading {
+        margin-top: 90px;
+    }
+    .banner-item {
+        .banner-img {
+            vertical-align: bottom;
+            width: 100%;
+            height: 280px;
+        }
+    }
+    .unslider-nav {
+        position: relative;
+        top: -30px;
+    }
+    .unslider-arrow.next,
+    .unslider-arrow.prev {
+        color: white;
+        font-size: 28px;
+        top: 126px;
+    }
+}
+
+.floor-wrap {
+    .floor-title {
+        height: 50px;
+        line-height: 50px;
+        .link {
+            color: #d58717;
+        }
+        font-size: 20px;
+        border-bottom: 1px solid #d58717;
+    }
+    &:nth-child(2) .floor-title {
+        .link {
+            color: #3B838c;
+        }
+        border-bottom: 1px solid #3B838c;
+    }
+    &:nth-child(3) .floor-title {
+        .link {
+            color: #a93931;
+        }
+        border-bottom: 1px solid #a93931;
+    }
+    &:nth-child(4) .floor-title {
+        .link {
+            color: #488bab;
+        }
+        border-bottom: 1px solid #488bab;
+    }
+    &:nth-child(5) .floor-title {
+        .link {
+            color: #642663;
+        }
+        border-bottom: 1px solid #642663;
+    }
+    &:nth-child(6) .floor-title {
+        .link {
+            color: rgb(140, 59, 79);
+        }
+        border-bottom: 1px solid rgb(140, 59, 79);
+    }
+    .floor-list {
+        margin-right: -20px;
+        display: flex;
+        .floor-item {
+            width: 180px;
+            height: 220px;
+            margin: 15px 20px 15px 0;
+            cursor: pointer;
+            padding: 0 10px;
+            .floor-img {
+                width: 180px;
+                height: 180px;
+                display: table;
+                &:hover {
+                    box-shadow: 2px 2px 6px #383838;
+                }
+                a {
+                    display: table-cell;
+                }
+            }
+            .floor-text {
+                font-size: 16px;
+                width: 180px;
+                height: 40px;
+                line-height: 20px;
+            }
+        }
+    }
+}
