--- a/src/view/result.tmp.html
+++ b/src/view/result.tmp.html
@@ -35,10 +35,33 @@
                     </div>
                 </div>
 
+                <!-- 加入心愿单成功 -->
+                <div class="result-con wishlist-add-success">
+                    <h1 class="result-title">
+                        加入心愿单成功!
+                    </h1>
+                    <div class="result-content">
+                        <p>(<span class="timetoGoHome">10</span>s后回到首页)</p>
+                        <a href="./index.html" class="result-link">回到首页</a>
+                    </div>
+                </div>
+
                 <!-- 默认结果页面 -->
                 <div class="result-con default-success">
                     <h1 class="result-title">
                         操作成功!
+                    </h1>
+                    <div class="result-content">
+                        <p>(<span class="timetoGoHome">10</span>s后回到首页)</p>
+                        <a href="./index.html" class="result-link">回到首页</a>
+                    </div>
+                </div>
+                
+                
+                <!-- 产品未找到页面 -->
+                <div class="result-con productDetail-fail">
+                    <h1 class="result-title">
+                        该产品未找到或已过期!!
                     </h1>
                     <div class="result-content">
                         <p>(<span class="timetoGoHome">10</span>s后回到首页)</p>
