--- a/src/page/common/header/index.scss
+++ b/src/page/common/header/index.scss
@@ -1,5 +1,4 @@
 @import '../glob.scss';
-
 .header {
     .logo {
         position: absolute;
@@ -11,7 +10,7 @@
     }
     .search-content {
         padding: 40px 0 30px 250px;
-        .search-input{
+        .search-input {
             width: 550px;
             height: 40px;
             line-height: 40px;
@@ -20,21 +19,22 @@
             border: 2px solid $themeColor;
             outline: none;
         }
-        .search-btn{
+        .search-btn {
             font-size: 24px;
             position: absolute;
             height: 44px;
             line-height: 44px;
-            width:80px;
+            width: 80px;
             text-align: center;
         }
     }
 }
 
 //面包屑导航
-.crumb{
+.crumb {
     height: 50px;
     line-height: 50px;
+    min-width: 1080px;
     background: #eeeeee;
     color: #888888;
     font-size: 14px;
