--- a/src/page/detail/index.scss
+++ b/src/page/detail/index.scss
@@ -63,7 +63,7 @@
             .info-value {
                 margin-left: 10px;
             }
-            .wishList-add {
+            .wishlist-add {
                 margin-top: 24px;
             }
         }
