--- a/src/view/layout/head-common.html
+++ b/src/view/layout/head-common.html
@@ -2,3 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="keywords" content="xuanhuan,物物交换 ">
+<link rel="dns-prefetch" href="//cdn.bootcss.com">
