--- a/src/view/detail.tmp.html
+++ b/src/view/detail.tmp.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh-cmn-Hans">
 <head>
     <%= require('html-loader!./layout/head-common.html') %>
     <title><%= htmlWebpackPlugin.options.title %>-玄换</title>
@@ -8,6 +7,7 @@
 
 <body>
     <div class="content">
+        <%= require('html-loader!./layout/nav.html') %>
         <%= require('html-loader!./layout/header.html') %>
         <div class="crumb">
             <div class="w">
