--- a/src/view/index.tmp.html
+++ b/src/view/index.tmp.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh-cmn-Hans">
 <head>
     <%= require('html-loader!./layout/head-common.html') %>
-        <title>
-            <%= htmlWebpackPlugin.options.title %>-玄换</title>
+    <title>
+    <%= htmlWebpackPlugin.options.title %>-玄换</title>
 </head>
 <!-- 图书,数码,服装,饰品,母婴 -->
 
