--- a/src/view/layout/nav.html
+++ b/src/view/layout/nav.html
@@ -17,13 +17,13 @@
 
         <ul class="nav-list">
             <li class="nav-item">
-                <a href="./user-wanted.html" class="link">
+                <a href="./wishlist.html" class="link">
                     <i class="far fa-clipboard"></i>
                     愿望单(<span class="msg-count">0</span>)
                 </a>
             </li>
             <li class="nav-item">
-                <a href="./user-release.html" class="link">发布闲置</a>
+                <a href="./userGoods-detail.html" class="link">发布闲置</a>
             </li>
             <li class="nav-item">
                 <a href="./user-center.html" class="link">个人中心</a>
