--- a/src/view/result.tmp.html
+++ b/src/view/result.tmp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cmn-Hans">
 
 <head>
     <%= require('html-loader!./layout/head-common.html') %>
@@ -39,6 +39,17 @@
                 <div class="result-con wishlist-add-success">
                     <h1 class="result-title">
                         加入心愿单成功!
+                    </h1>
+                    <div class="result-content">
+                        <p>(<span class="timetoGoHome">10</span>s后回到首页)</p>
+                        <a href="./index.html" class="result-link">回到首页</a>
+                    </div>
+                </div>
+
+                <!-- 交换物品成功 -->
+                <div class="result-con trading-success">
+                    <h1 class="result-title">
+                        恭喜您,物品交换成功!
                     </h1>
                     <div class="result-content">
                         <p>(<span class="timetoGoHome">10</span>s后回到首页)</p>
